force-app/main/default/objects/Integration_Datasource__mdt/Integration_Datasource__mdt.object-meta.xml
<CustomObject>
    <description>Integration Systems such as Salesforce, NetSuite, OpenAIr etc.</description>
    <label>Integration Datasource</label>
    <pluralLabel>Integration Datasources</pluralLabel>
</CustomObject>