force-app/main/default/objects/Integration_Datasource__mdt/fields/Internal_Path__c.field-meta.xml
<CustomField>
    <fullName>Internal_Path__c</fullName>
    <label>Internal Parent Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>