force-app/main/default/objects/Integration_Datasource__mdt/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <label>Request URL</label>
    <type>Url</type>
</CustomField>